--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -38,6 +38,7 @@
         }
         .dashboard {
             display: flex;
+            flex-wrap: wrap;
             justify-content: space-between;
             margin-bottom: 20px;
         }
@@ -45,7 +46,8 @@
             background-color: #fff;
             border-radius: 8px;
             padding: 15px;
-            width: 23%;
+            width: 48%;
+            margin-bottom: 10px;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
         .metric-title {
@@ -112,7 +114,7 @@
         .status-onGoing { color: #87CEEB; }
         .status-ready { color: #8E44AD; }
         .status-dispatched { color: #e67e22; }
-        #resetButton {
+        .action-button {
             background-color: #3498db;
             color: white;
             border: none;
@@ -123,8 +125,13 @@
             margin-top: 10px;
             transition: background-color 0.3s ease;
         }
-        #resetButton:hover {
+        .action-button:hover {
             background-color: #2980b9;
+        }
+        #controlButtons {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 10px;
         }
     </style>
 </head>
@@ -133,7 +140,10 @@
         <div class="sidebar">
             <h2>Pedidos</h2>
             <div id="orderList" class="order-list"></div>
-            <button id="resetButton" onclick="resetCounters()">Zerar Contadores</button>
+            <div id="controlButtons">
+                <button id="startButton" class="action-button" onclick="startCounters()">Iniciar Contadores</button>
+                <button id="resetButton" class="action-button" onclick="resetCounters()">Zerar Contadores</button>
+            </div>
         </div>
         <div class="main-content">
             <div class="dashboard">
@@ -148,6 +158,7 @@
                 <div class="metric-card">
                     <div class="metric-title">Valor Total</div>
                     <div id="totalValue" class="metric-value">R$ 0,00</div>
+                    <div id="paymentBreakdown"></div>
                 </div>
                 <div class="metric-card">
                     <div class="metric-title">Tempo Médio de Preparo</div>
@@ -184,6 +195,16 @@
         let orderPrepTimes = {};
         let totalPrepTime = 0;
         let preparedOrders = 0;
+        let countingStarted = false;
+        let startTime;
+        let totalOrdersCount = 0;
+        let totalOrdersValue = 0;
+        let paymentMethods = {
+            credit_card: 0,
+            debit_card: 0,
+            cash: 0,
+            pix: 0
+        };
 
         function initMap() {
             const centerAddress = { lat: -5.750636, lng: -35.254625 };
@@ -255,6 +276,7 @@
                     <p>Método de Pagamento: ${translatePaymentMethod(order.paymentMethod)}</p>
                     <p>Total do Pedido: R$ ${order.orderTotal ? order.orderTotal.toFixed(2) : 'N/A'}</p>
                     ${order.notes ? `<p>Observações: ${order.notes}</p>` : ''}
+                    <p>Tempo de Preparo: <span id="prepTime-${order.id}">0 min</span></p>
                     <div class="order-options">
                         <i class="fas fa-map-marker-alt" onclick="centerOrderOnMap('${order.uid}')"></i>
                     </div>
@@ -318,7 +340,7 @@
             };
         }
 
-        async function updateCourierLocation(order) {
+async function updateCourierLocation(order) {
             try {
                 const response = await axios.get(trackingUrl, {
                     headers: {
@@ -334,7 +356,7 @@
                     const { lat, lng } = tracking.courierLocationCoordinates;
                     let courierMarker = markers[`courier-${order.courier.courierName}`];
 
-if (!courierMarker) {
+                    if (!courierMarker) {
                         courierMarker = new google.maps.Marker({
                             position: { lat, lng },
                             map: map,
@@ -411,6 +433,7 @@ if (!courierMarker) {
                         <p>Método de Pagamento: ${translatePaymentMethod(order.paymentMethod)}</p>
                         <p>Total do Pedido: R$ ${order.orderTotal ? order.orderTotal.toFixed(2) : 'N/A'}</p>
                         ${order.notes ? `<p>Observações: ${order.notes}</p>` : ''}
+                        <p>Tempo de Preparo: ${getPrepTimeForOrder(order.id)} min</p>
                     </div>
                 `
             });
@@ -441,11 +464,18 @@ if (!courierMarker) {
         }
 
         function updateDashboard(orders) {
-            document.getElementById('totalOrders').textContent = orders.length;
+            if (!countingStarted) return;
+
+            document.getElementById('totalOrders').textContent = totalOrdersCount;
             document.getElementById('ongoingOrders').textContent = orders.filter(order => order.status === 'onGoing').length;
             
-            const totalValue = orders.reduce((sum, order) => sum + (order.orderTotal || 0), 0);
-            document.getElementById('totalValue').textContent = `R$ ${totalValue.toFixed(2)}`;
+            document.getElementById('totalValue').textContent = `R$ ${totalOrdersValue.toFixed(2)}`;
+            
+            const paymentBreakdown = document.getElementById('paymentBreakdown');
+            paymentBreakdown.innerHTML = '';
+            for (const [method, value] of Object.entries(paymentMethods)) {
+                paymentBreakdown.innerHTML += `<p>${translatePaymentMethod(method)}: R$ ${value.toFixed(2)}</p>`;
+            }
         }
 
         function updatePrepTimes(orders) {
@@ -459,17 +489,61 @@ if (!courierMarker) {
                     preparedOrders++;
                     delete orderPrepTimes[order.id];
                 }
+
+                const prepTimeElement = document.getElementById(`prepTime-${order.id}`);
+                if (prepTimeElement) {
+                    prepTimeElement.textContent = `${getPrepTimeForOrder(order.id)} min`;
+                }
             });
 
             const avgPrepTime = preparedOrders > 0 ? totalPrepTime / preparedOrders : 0;
             document.getElementById('avgPrepTime').textContent = `${avgPrepTime.toFixed(1)} min`;
         }
 
+        function getPrepTimeForOrder(orderId) {
+            if (orderPrepTimes[orderId]) {
+                const now = new Date();
+                return ((now.getTime() - orderPrepTimes[orderId]) / 60000).toFixed(1);
+            }
+            return '0.0';
+        }
+
+        function startCounters() {
+            countingStarted = true;
+            startTime = new Date();
+            totalOrdersCount = 0;
+            totalOrdersValue = 0;
+            paymentMethods = {
+                credit_card: 0,
+                debit_card: 0,
+                cash: 0,
+                pix: 0
+            };
+            document.getElementById('startButton').disabled = true;
+            document.getElementById('resetButton').disabled = false;
+        }
+
         function resetCounters() {
+            countingStarted = false;
+            startTime = null;
+            totalOrdersCount = 0;
+            totalOrdersValue = 0;
+            paymentMethods = {
+                credit_card: 0,
+                debit_card: 0,
+                cash: 0,
+                pix: 0
+            };
             totalPrepTime = 0;
             preparedOrders = 0;
             orderPrepTimes = {};
-            document.getElementById('avgPrepTime').textContent = '0 min';
+            document.getElementById('avgPrepTime').textContent = '0.0 min';
+            document.getElementById('totalOrders').textContent = '0';
+            document.getElementById('ongoingOrders').textContent = '0';
+            document.getElementById('totalValue').textContent = 'R$ 0.00';
+            document.getElementById('paymentBreakdown').innerHTML = '';
+            document.getElementById('startButton').disabled = false;
+            document.getElementById('resetButton').disabled = true;
         }
 
         initMap();
@@ -478,3 +552,6 @@ if (!courierMarker) {
     </script>
 </body>
 </html>
+            try {
+                const response = await axios.get(trackingUrl, {
+                    headers
