--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -19,7 +19,7 @@
         }
         .container { 
             display: flex; 
-            height: 100vh; 
+            height: 100vh;
         }
         .sidebar { 
             width: 350px; 
@@ -35,6 +35,7 @@
             display: flex; 
             flex-direction: column; 
             padding: 20px;
+            overflow-y: auto;
         }
         .dashboard {
             display: flex;
@@ -46,7 +47,7 @@
             background-color: #fff;
             border-radius: 8px;
             padding: 15px;
-            width: 48%;
+            width: 23%;
             margin-bottom: 10px;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
@@ -61,9 +62,10 @@
             color: #2c3e50;
         }
         #map { 
-            flex-grow: 1; 
+            height: 500px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            margin-top: 20px;
         }
         .order-list { 
             flex-grow: 1;
@@ -132,6 +134,10 @@
             display: flex;
             justify-content: space-between;
             margin-top: 10px;
+        }
+        #paymentBreakdown {
+            font-size: 14px;
+            margin-top: 5px;
         }
     </style>
 </head>
@@ -205,6 +211,7 @@
             cash: 0,
             pix: 0
         };
+        let currentOrders = [];
 
         function initMap() {
             const centerAddress = { lat: -5.750636, lng: -35.254625 };
@@ -249,13 +256,13 @@
                     }
                 });
                 console.log('Pedidos recebidos:', response.data);
-                const filteredOrders = response.data.filter(order => 
+                currentOrders = response.data.filter(order => 
                     ['onGoing', 'ready', 'accepted', 'dispatched'].includes(order.status)
                 );
-                updateOrderList(filteredOrders);
-                updateMap(filteredOrders);
-                updateDashboard(filteredOrders);
-                updatePrepTimes(filteredOrders);
+                updateOrderList(currentOrders);
+                updateMap(currentOrders);
+                updateDashboard(currentOrders);
+                updatePrepTimes(currentOrders);
             } catch (error) {
                 console.error('Erro ao buscar pedidos:', error);
                 document.getElementById('orderList').innerHTML = '<p class="error">Erro ao carregar pedidos. Por favor, tente novamente mais tarde.</p>';
@@ -319,7 +326,7 @@
             heatmap.setData(heatmapData);
         }
 
-        function getOrderMarkerIcon(status, orderId) {
+  function getOrderMarkerIcon(status, orderId) {
             let color;
             switch (status) {
                 case 'ready': color = '#8E44AD'; break;
@@ -340,7 +347,7 @@
             };
         }
 
-async function updateCourierLocation(order) {
+        async function updateCourierLocation(order) {
             try {
                 const response = await axios.get(trackingUrl, {
                     headers: {
@@ -511,16 +518,22 @@ async function updateCourierLocation(order) {
         function startCounters() {
             countingStarted = true;
             startTime = new Date();
-            totalOrdersCount = 0;
-            totalOrdersValue = 0;
+            totalOrdersCount = currentOrders.length;
+            totalOrdersValue = currentOrders.reduce((sum, order) => sum + (order.orderTotal || 0), 0);
             paymentMethods = {
                 credit_card: 0,
                 debit_card: 0,
                 cash: 0,
                 pix: 0
             };
+            currentOrders.forEach(order => {
+                if (paymentMethods.hasOwnProperty(order.paymentMethod)) {
+                    paymentMethods[order.paymentMethod] += order.orderTotal || 0;
+                }
+            });
             document.getElementById('startButton').disabled = true;
             document.getElementById('resetButton').disabled = false;
+            updateDashboard(currentOrders);
         }
 
         function resetCounters() {
@@ -552,6 +565,3 @@ async function updateCourierLocation(order) {
     </script>
 </body>
 </html>
-            try {
-                const response = await axios.get(trackingUrl, {
-                    headers
